# Self-Healing-Kubernetes-Operator

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: crd.yaml  deployment.yaml  rbac.yaml
examples/: apphealth-frontend.yaml  apphealth-order-service.yaml  apphealth-payment-api.yaml
helm/self-healing-operator/: Chart.yaml  values.yaml
helm/self-healing-operator/templates/: NOTES.txt  _helpers.tpl  crd.yaml  deployment.yaml  namespace.yaml  pvc.yaml  role.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
src/: __init__.py  cli.py  config.py  errors.py  istio_adapter.py  leader_election.py  metrics_adapter.py  metrics_server.py  operator.py  remediation.py  ticket_integration.py
tests/: test_config.py  test_istio_adapter.py  test_leader_election.py  test_metrics_adapter.py  test_metrics_server.py  test_multi_namespace.py  test_remediation.py  test_ticket_integration.py
